<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_centerInParent="true"
    	android:gravity="center"
        >
        <TextView 
		    android:id="@+id/app_name"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/app_name"
	    	android:textSize="24sp"
	    	android:textColor="@color/accent"
	    />
		<TextView 
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/Yakutia"
	    	android:textSize="12sp"
	    	android:layout_marginLeft="50dp"
	    	android:textStyle="italic"
	    	android:textColor="@color/accent"
		    />
    </LinearLayout>
	
    <LinearLayout
        android:id="@+id/update_layout"
        android:layout_width="match_parent"
	    android:layout_height="230dp"
	    android:layout_alignParentBottom="true"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:visibility="gone"
        >
		<TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/accent"
            android:textSize="14sp"
            android:text="@string/update_app"
            android:layout_marginBottom="30dp"
   			/>
        <Button
            android:id="@+id/btn_update_app"
            android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:background="@drawable/pulse_white_circle"
	        android:text="@string/update"
	        android:textSize="14sp"
    		android:textColor="@color/accent"
            >
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
	    android:layout_height="230dp"
	    android:layout_alignParentBottom="true"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:visibility="gone"
        >
		<TextView
		    android:id="@+id/info_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/accent"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"
   			/>
        <Button
            android:id="@+id/btn_info_exit"
            android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:background="@drawable/pulse_white_circle"
	        android:text="@string/exit"
	        android:textSize="14sp"
    		android:textColor="@color/accent"
            >
        </Button>
    </LinearLayout>
	<LinearLayout
	    android:id="@+id/error_layout"
	    android:layout_width="match_parent"
	    android:layout_height="230dp"
	    android:layout_alignParentBottom="true"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:visibility="gone"
	    >
		<TextView
	            android:id="@+id/error_text"
	            android:layout_width="250dp"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textColor="@color/accent"
	            android:textSize="14sp"
	   			/>
		<LinearLayout
	        android:layout_width="match_parent"
	   		android:layout_height="180dp"
	   		android:orientation="horizontal"
	   		android:gravity="center"
            >
			
            <RelativeLayout 
                android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:gravity="center"
    			android:layout_weight=".5"
                >
                <Button 
                    android:id="@+id/btn_repeat"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:layout_centerInParent="true"
	                android:background="@drawable/pulse_white_circle"
	                android:textSize="12sp"
    				android:textColor="@color/accent"
	                android:text="@string/btn_again"
                    />

            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:gravity="center"
    			android:layout_weight=".5"
                >
                <Button 
                    android:id="@+id/btn_exit"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:layout_centerInParent="true"
	                android:background="@drawable/pulse_white_circle"
	                android:textSize="12sp"
    				android:textColor="@color/accent"
    				android:text="@string/btn_exit"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/load_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Запуск"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	    android:gravity="center"
	    android:layout_marginBottom="80dp"
        android:textColor="@color/accent"
        android:textSize="12sp"
        />
	<View 
	    android:id="@+id/load_circle"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="30dp"
	    android:background="@drawable/circle_sky"
	    />
</RelativeLayout>
