<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:clickable="true"
    android:orientation="vertical" >
    

    <LinearLayout
        android:id="@+id/exit_layout"
        android:layout_width="match_parent"
   		android:layout_height="300dp"
   		android:orientation="vertical"
   		android:background="@drawable/gradient_exit"
   		android:gravity="center_horizontal|bottom"
        >
        <LinearLayout 
            android:layout_width="match_parent"
   			android:layout_height="60dp"
   			android:layout_marginTop="40dp"
   			android:gravity="center"
			android:background="@android:color/white"
            >
	        <TextView
	            android:id="@+id/common_text"
	            android:layout_width="250dp"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textColor="@color/midnight_blue"
				android:text="@string/are_u_sure_to_exit"
	            android:textSize="16sp"
	   			/>
        </LinearLayout>
        <LinearLayout
	        android:layout_width="match_parent"
	   		android:layout_height="200dp"
	   		android:orientation="horizontal"
	   		android:gravity="center"
            >
            <RelativeLayout 
                android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:gravity="center"
    			android:layout_weight=".5"
                >
                <View
	                android:id="@+id/yes_btn"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:layout_centerInParent="true"
	                android:background="@drawable/pulse_white_circle"
					android:elevation="2dp"
                />
                <TextView
                    android:id="@+id/yes_text"
                    android:layout_width="100dp"
    				android:layout_height="wrap_content"
    				android:layout_centerInParent="true"
    				android:gravity="center"
    				android:textSize="16sp"
					android:elevation="2dp"
    				android:textColor="@color/midnight_blue"
    				android:text="@string/exit"
                    />
            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:gravity="center"
    			android:layout_weight=".5"
                >
                <View
	                android:id="@+id/no_btn"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:layout_centerInParent="true"
					android:elevation="2dp"
	                android:background="@drawable/pulse_white_circle"
                />
                <TextView
                    android:id="@+id/no_text"
                    android:layout_width="100dp"
    				android:layout_height="wrap_content"
    				android:layout_centerInParent="true"
    				android:gravity="center"
    				android:textSize="16sp"
    				android:textColor="@color/midnight_blue"
    				android:text="@string/btn_cancel"
					android:elevation="2dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
